--- a/srvbakrc.sample
+++ b/srvbakrc.sample
@@ -3,7 +3,6 @@
 services_stop=(
   'service naps stop'
 )
-
 services_start=(
   'service naps start'
 )
@@ -11,15 +10,11 @@ services_start=(
 base_dir=/__data/srvbak
 
 export BAKTOGIT_REPO="$base_dir"/baktogit BAKTOGIT_PUSH=yes
-
 baktogit=/path/to/baktogit
-
-baktogit_items=(
-  /__nap/cfg /etc
-)
+baktogit_items=( /__nap/cfg /etc )
 
 postgresql_dbs=( foo bar )
-
+mongo_dbs=( baz qux )
 data_dirs=( /__data/files )
 
 # vim: set tw=70 sw=2 sts=2 et fdm=marker :
