--- a/srvbakrc.sample
+++ b/srvbakrc.sample
@@ -7,18 +7,19 @@ services_start=(
   'service naps start'
 )
 
-base_dir=/__data/srvbak
+base_dir=/__data/srvbak   # backups will be stored in subdirs
+keep_for=14               # keep backups 14 days
 
 export BAKTOGIT_REPO="$base_dir"/baktogit BAKTOGIT_PUSH=yes
 baktogit=/path/to/baktogit
-baktogit_items=( /__nap/cfg /etc )
+baktogit_items=( /__nap/apps/.apps /__nap/cfg /etc )
 
 export PGHOST=localhost PGPASSFILE=/path/to/password/file
-postgresql_dbs=( foo bar )
+postgresql_dbs=( db1 db2 )
 
-mongo_passfile=/path/to/password/file
-mongo_dbs=( baz qux )
+mongo_host=localhost mongo_passfile=/path/to/password/file
+mongo_dbs=( db3 db4 )
 
-data_dirs=( /__data/files )
+data_dirs=( /__data/files /__nap )
 
 # vim: set tw=70 sw=2 sts=2 et fdm=marker :
