--- a/srvbakrc.sample
+++ b/srvbakrc.sample
@@ -15,6 +15,15 @@ gpg_key='...'
 
 # --
 
+# The status (as kept in $base_dir/status) should be one of: 'running
+# $$', 'ok', 'ok first-run', or 'error'.  The following will make sure
+# not to continue if running or error; you may want to change this to
+# status_must_not_be='running*' to continue even if the last run
+# failed.
+status_must_be='ok*'
+
+# --
+
 export BAKTOGIT_REPO=/__data/baktogit/repo BAKTOGIT_PUSH=no
                                     # NB: repo not in $base_dir!
 baktogit=/opt/src/baktogit/baktogit.bash
