fix perms; {,.var/}{status,lock}

--- a/srvbakrc.sample
+++ b/srvbakrc.sample
@@ -15,11 +15,19 @@ gpg_key='...'
 
 # --
 
-# The status (as kept in $base_dir/status) should be one of: 'running
-# $$', 'ok', 'ok first-run', or 'error'.  The following will make sure
-# not to continue if running or error; you may want to change this to
-# status_must_not_be='running*' to continue even if the last run
-# failed.
+# fix permissions/ownership (the umask is 0077)
+chown_to=                           # change user     (if set)
+chgrp_to=srvbak                     # change group    (if set)
+chmod_dirs=750                      # set dir perms   (if set)
+chmod_files=640                     # set file perms  (if set)
+
+# --
+
+# The status (as kept in $base_dir/.var/status) should be one of:
+# 'running $$', 'ok', 'ok first-run', or 'error'.  The following will
+# make sure not to continue if running or error; you may want to
+# change this to status_must_not_be='running*' to continue even if the
+# last run failed.
 status_must_be='ok*'
 
 # --
