--- a/srvbak-unlock.bash.sample
+++ b/srvbak-unlock.bash.sample
@@ -1,5 +1,7 @@
 #!/bin/bash
 
+set -e
+
 base_dir=/__data/srvbak
 
-set -e ; lock="$base_dir/.var/lock" ; rm -f "$lock"
+lock="$base_dir/.var/lock" ; rm -f "$lock"
